<resources>
    <string name="app_name">FastCall</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_frota">Frota</string>
    <string name="title_activity_login_reg">Registar Utilizador</string>
    <string name="title_activity_login_list">Listar Utilizadores</string>

    <!-- Strings comuns -->
    <string name="logo">Logo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Registar</string>
    <string name="action_list">Listar</string>
    <string name="action_quit">Sair</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_user">Utilizador Não Existe</string>
    <string name="error_password">Password Errada</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to login register -->
    <string name="nome">Nome</string>
    <string name="apelido">Apelido</string>
    <string name="email">Email</string>
    <string name="empresa">Empresa</string>
    <string name="add">Adicionar</string>
    <string name="list">Listar</string>
    <string name="elim">Eliminar</string>


    <!-- Strings related to menu -->
    <string name="frota">Frota</string>
    <string name="intervencao">Intervenção</string>

    <!-- Strings related to registo -->
    <string name="title_activity_register">Register</string>
    <string name="rbt_funcionario">Funcionário</string>
    <string name="rbt_material">Material</string>
    <string name="rbt_carro">Carro</string>

    <!-- Strings related to intervenção -->
    <string name="title_activity_registo">Registo</string>
    <string name="title_activity_intervencao">Intervencao</string>

    <!-- Strings related to empresa -->
    <string-array name="logo">
        <item>@drawable/fc_icon </item>
        <item>@drawable/fs_icon </item>
    </string-array>
    <string-array name="empresa">
        <item>Fastcall</item>
        <item>Fieldservices</item>
    </string-array>

    <string-array name="estado">
        <item></item>
        <item>Instalado</item>
        <item>Recolhido</item>
        <item>Substituido</item>
        <item>Stock</item>
        <item>Tecnico</item>
    </string-array>

    <!-- Strings related to barcode -->
    <string name="scan">Leitor</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_material">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>


    <!-- Strings related to intervenções -->
    <string name="cliente">Cliente</string>
    <string name="tecnico">Técnico</string>
    <string name="material">Material</string>


    <!-- Strings to CHECAR-->
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cam">Camera</string>
    <string name="Pdf">Pdf</string>
    <string name="VPdf">Ver</string>
    <string name="label_email">Email</string>
    <string name="label_preview">Pré-visualização</string>
    <string name="label_cancel">Cancelar</string>
    <string name="Gallery">Galeria</string>
    <string name="agenda">Agenda</string>
    <string name="sair">Sair</string>


    <string name="L_manutencao">Prazos de Manutenção Expirados:</string>
    <string name="diario">Diário</string>
    <string name="action_load">Load</string>
    <string name="adic">Adicionar</string>
    <string name="dig">Digitar</string>
    <string name="Equi">Equipa. :</string>
    <string name="tarefa">Tarefa</string>
    <string name="mate">Material :</string>
    <string name="rbt_janela">Ordens</string>
    <string name="lista">Consultas</string>

</resources>
