<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registo.Registo">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="true">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:id="@+id/BT_Back"
            android:src="@drawable/fc_icon"
            android:background="#00ffffff"
            android:layout_gravity="left|center_vertical"
            android:contentDescription="@string/logo" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/registo_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:id="@+id/ll_registo_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                  <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rgbt"
                      android:orientation="horizontal"
                      android:gravity="center_horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbt_funcionario"
                        android:id="@+id/RBT_Func"
                        android:checked="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbt_carro"
                        android:id="@+id/RBT_Car"
                        android:checked="false" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbt_material"
                        android:id="@+id/RBT_Mater"
                        android:checked="false" />
                </RadioGroup>

            <Button
                android:id="@+id/BT_Reg"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textStyle="bold" />

            <Button
                style="?android:textAppearanceSmall"
                android:id="@+id/BT_List"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_list"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>




</RelativeLayout>
